--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "Clash Display";
+  src: local("ClashDisplay"), url("./fonts/ClashDisplay.ttf") format("truetype");
+}
+
+* {
+  font-family: "Clash Display";
+}
